First pass at refactoring hot methods